<resources>
    <string name="app_name" translatable="false">Hoshiko</string>
    <string name="desc_toolbar">A app written in C and Kotlin for Re-Malwack.</string>
    <string name="daemonTogglebtn">Enable Yuki</string>
    <string name="enterapppackagetorm">Enter package name to remove</string>
    <string name="enterapppackagetoadd">Enter package name to add</string>
    <string name="import_btn">Import</string>
    <string name="export_btn">Export</string>
    <string name="noroot">Please give root permissions to access this application\'s functionality!</string>
    <string name="okay_button_text">Sure thing!</string>
    <string name="addedgivenpackage">Successfully added given package!</string>
    <string name="failedtoaddgivenpackage">Failed to add given package, it might be already be in the list.</string>
    <string name="removedgivenpackage">Successfully removed given package!</string>
    <string name="failedtoremovegivenpackage">Failed to remove given package, it might not be in the list.</string>
    <string name="startedyukisuccessfully">Successfully started Yuki service!</string>
    <string name="failedtostartyuki">Failed to start Yuki service!</string>
    <string name="stoppedyukisuccessfully">Successfully stopped Yuki service!</string>
    <string name="failedtostopyuki">Failed to stop Yuki service!</string>
    <string name="failedtoimportpackagelist">Failed to import package list, please put your list file at /sdcard/export-alya.txt</string>
    <string name="importedpackagelistsuccessfully">Successfully imported package list!</string>
    <string name="failedtoexportpackagelist">Failed to export package list!</string>
    <string name="exportedpackagelistsuccessfully">Successfully exported package list at /sdcard/export-alya.txt</string>
</resources>