<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000000"
    tools:context=".MainActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">
        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#CBC3E3"
            android:theme="@style/ThemeOverlay.Material3.Dark.ActionBar" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical"
            android:paddingTop="90dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:textSize="17sp"
                android:textColor="@android:color/black"
                android:text="@string/app_name" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/montserrat_medium"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:text="@string/desc_toolbar" />
        </LinearLayout>
    </FrameLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/enableDaemon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/daemonTogglebtn"
                android:textColor="#FFFFFF"
                android:layout_marginBottom="16dp" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterapppackagetoadd">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/appToAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/enterapppackagetorm">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/appToRemove"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="30dp">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/importPreviousState"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/import_prev_icon"
            android:drawablePadding="6dp"
            android:text="@string/import_btn"
            android:textColor="#FFFFFF" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/ExportState"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/export_icon"
            android:drawablePadding="6dp"
            android:text="@string/export_btn"
            android:textColor="#FFFFFF" />
    </LinearLayout>
</LinearLayout>